...
};

const _troops = {
  'troops': [
    {
      'troopid': 1001,
      'name': 'Star Wars Celebration 2025',
      'dateStart': '2025-05-07T10:00:00',
      'dateEnd': '2025-05-11T18:00:00',
      'squad': 1,
      'link': 0,
      'notice': null,
      'trooper_count': 24,
...
