...

                      // Discussion
                      SizedBox(
                        width: double.infinity,
                        child: ElevatedButton.icon(
                          icon: const Icon(Icons.chat_bubble, size: 20),
                          label: const Text('Go To Discussion'),
                          onPressed: _openChat,
                        ),
                      ),

                      const Divider(),
                      const SizedBox(height: 10),
...
